--- a/Explainable_Deep_Learning.ipynb
+++ b/Explainable_Deep_Learning.ipynb
@@ -11,6 +11,48 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Explainable Deep Learning"
+      ],
+      "metadata": {
+        "id": "hXKf9JW_fwH4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Hypothesis Testing\n",
+        "H0: The GoogleNet model does not show a significant difference in its ability to learn the concept \"striped\" compared to the concept \"dotted\" for the class ‘cheetah’.\n",
+        "\n",
+        "\n",
+        "\n",
+        "H1: The GoogleNet model shows a significant difference in its ability to learn the concept \"striped\" compared to the concept \"dotted\" for the class ‘cheetah’, specifically, it learns the concept \"dotted\" but not the concept \"striped\" or \"zigzagged\"."
+      ],
+      "metadata": {
+        "id": "1Mdza2hNguIF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Experiement--Testing Concept Activation Vectors (TCAV)\n",
+        "Testing Concept Actication Vectors method is used here to test for the hypothesis."
+      ],
+      "metadata": {
+        "id": "GAF0BMRehP5N"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Import Github Repo and Packages"
+      ],
+      "metadata": {
+        "id": "c7tuTr6vhSr5"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -98,18 +140,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {
-        "id": "GJbQYgZy5g_s"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        "# from google.colab import drive\n",
-        "# drive.mount('/content/drive')\n",
-        "# %cd MyDrive/giraffe/\n",
-        "# %ls"
-      ]
+        "The data used here is imported from ImageNet. The data download and creation process is updated in https://github.com/XueqingWu/tcav/blob/master/tcav/tcav_examples/image_models/imagenet/download_and_make_datasets.py"
+      ],
+      "metadata": {
+        "id": "WHkIjxkmhYB6"
+      }
     },
     {
       "cell_type": "code",
@@ -505,6 +542,30 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Test Results\n",
+        "According to the"
+      ],
+      "metadata": {
+        "id": "At4FMx6UkMGL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## References\n",
+        "Demo Notebook: https://github.com/AIPI-590-XAI/Duke-AI-XAI/blob/main/explainable-ml-example-notebooks/testing_concept_activation_vectors.ipynb\n",
+        "\n",
+        "Source Code: https://github.com/tensorflow/tcav\n",
+        "\n",
+        "ImageNet Data References: https://github.com/AIPI-590-XAI/Duke-AI-XAI/blob/main/adversarial-ai-example-notebooks/imagenet_classes.txt"
+      ],
+      "metadata": {
+        "id": "Gujr6MZSfVAK"
+      }
     }
   ],
   "metadata": {
@@ -512,7 +573,8 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
-      "authorship_tag": "ABX9TyNMQ+LjeuQt5OUipLoFnttp",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMJJlsIU4nVR82ntpGgGLo6",
       "include_colab_link": true
     },
     "kernelspec": {
