--- a/Explainable_Deep_Learning.ipynb
+++ b/Explainable_Deep_Learning.ipynb
@@ -546,8 +546,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "The TCAV score for dotted is about 0.8, which is statistically significant, whereas TCAV score for striped and zigzagged pattern is quite low."
+      ],
+      "metadata": {
+        "id": "wmvJzS2JnCrG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Test Results\n",
-        "According to the"
+        "According to the barplot and the statistical testing result, dotted pattern is statistically significant for identifying the cheetah. Stripes and zigzagged is not statistically significant to identify for the cheetah.\n",
+        "\n",
+        "**Conslusion:** dotted pattern is used by GoogleNet to determine whether it is cheetah, whereas strpes and zigzagged pattern are not used to determine here."
       ],
       "metadata": {
         "id": "At4FMx6UkMGL"
@@ -574,7 +585,7 @@
       "gpuType": "T4",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMJJlsIU4nVR82ntpGgGLo6",
+      "authorship_tag": "ABX9TyNlVQTf0HS3TLhpKGFXBS0O",
       "include_colab_link": true
     },
     "kernelspec": {
